--- a/web/style/admin-dashboard.css
+++ b/web/style/admin-dashboard.css
@@ -19,6 +19,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/JSP_Servlet/CascadeStyleSheet.css
     margin: auto;
     border: 1px solid #ddd;
     background: linear-gradient(145deg, #f5f5f5, #ffffff);
+    table-layout: auto;
 }
 
 .table-minimalist th,
@@ -27,11 +28,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/JSP_Servlet/CascadeStyleSheet.css
     border: 1px solid #ddd;
 }
 
-.table-minimalist tbody tr:hover {
-    background-color: #f9f9f9;
-    transform: scale(1.02);
-    transition: transform 0.2s ease, background-color 0.2s ease;
-}
+
 
 table {
     width: 100%;
@@ -50,12 +47,29 @@ thead {
     background-color: #f4f4f4;
 }
 
-tbody tr:hover {
-    background-color: #f1f1f1;
+.table-minimalist .pic {
+    width: 40px;
+    height: 40px;
+    border-radius: 40px;
+    object-fit: cover;
 }
 
-/* Responsive Design */
-@media screen and (max-width: 768px) {
+
+@media (min-width: 400px) and (max-width: 599px) {
+    .content-dashboard {
+        width: 100%;
+    }
+    th,
+    td {
+        font-size: 12px;
+        padding: 8px;
+    }
+}
+
+@media (min-width: 600px) and (max-width: 799px) {
+    .content-dashboard {
+        width: 100%;
+    }
     table {
         display: block;
         overflow-x: auto;
@@ -68,10 +82,9 @@ tbody tr:hover {
     }
 }
 
-@media screen and (max-width: 480px) {
-    th,
-    td {
-        font-size: 12px;
-        padding: 8px;
+/* Extra large devices (large laptops and desktops, 1200px and up) */
+@media (min-width: 800px) and (max-width: 1279px) {
+    .content-dashboard {
+        width: 85%;
     }
 }
