--- a/web/style/user-consult.css
+++ b/web/style/user-consult.css
@@ -11,6 +11,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/JSP_Servlet/CascadeStyleSheet.css
     padding: 30px 2%;
     width: 80%;
     margin: auto;
+    min-height: 100vh;
     background-color: #fff;
 }
 .search-bar {
